--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         </activity>
         <activity android:name=".RecipeStepsListActivity" />
         <activity android:name=".IngredientsActivity" />
-        <activity android:name=".StepActivity"></activity>
+        <activity android:name=".StepActivity" />
+        <activity android:name=".TabletActivity"></activity>
     </application>
 
 </manifest>
